Bug 379082 - Unit tests are failing in Debian Stretch (9)
Summary: Unit tests are failing in Debian Stretch (9)
Status: RESOLVED FIXED
Alias: None
Product: Heaptrack
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Milian Wolff
URL: https://buildd.debian.org/status/fetc...
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-22 13:01 UTC by Anton Gladky
Modified: 2017-05-03 15:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Log (4.47 KB, text/x-log)
2017-04-22 13:01 UTC, Anton Gladky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Gladky 2017-04-22 13:01:29 UTC
Created attachment 105150 [details]
Log

Unit tests are failing in Debian Stretch (9). The relevant part of the log is in attachment.

================
2: /builddir/heaptrack/heaptrack-1.0.0/tests/auto/tst_trace.cpp:44: FAILED:
2:   REQUIRE( find(trace.begin(), trace.end(), Trace::ip_t(0)) == trace.end() )
2: with expansion:
2:   0x00007ffe262b4fe0 == 0x00007ffe262b4fe8
================
2: /builddir/heaptrack/heaptrack-1.0.0/tests/auto/tst_trace.cpp:40: FAILED:
2:   REQUIRE( trace.size() == expectedSize )
2: with expansion:
2:   6 == 7
================

Bug in Debian bugtracker: http://bugs.debian.org/860949

Thanks

Anton
Comment 1 Milian Wolff 2017-05-03 15:38:21 UTC
commit 3ddc8ba3c751436fddd2969ba349a76ab6b7f8d1
Author: Milian Wolff <milian.wolff@kdab.com>
Date:   Wed May 3 17:35:18 2017 +0200

    Filter zero frames from the end of the stack returned by libunwind
    
    Some (older) versions of libunwind eratically return zero frames
    at the end of the stack. This happened on Debian and Ubuntu with the
    distro provided libunwind. In such situations, we now skip these
    uninteresting frames.
    
    BUG: 379082